--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,7 @@
         }
     },
     "scripts": {
-        "start": "php -S localhost:3000 -t public",
+        "start": "php -S 0.0.0.0:3000 -t public",
         "test": "phpunit"
     }
 }
